-- release 2.6.1

- fixed:


Maven Central Repository:
https://repo.maven.apache.org/maven2/org/summerboot/jexpress/2.6.1/
https://central.sonatype.com/artifact/org.summerboot/jexpress/2.6.1

mvnrepository.com:
https://mvnrepository.com/artifact/org.summerboot/jexpress/2.6.1


-- release 2.6.0
- enhanced security 1: this change use enhanced encryption/decryption to protect sensitive data, like password in config files.
	The 2.5.2 cannot read the current encrypted data by 2.5.1
	it requires the app with 2.5.1 to decrypt to DEC, or deploy with DEC
	to decrypt: java -jar your-app.jar -decrypt -auth <root password> [-domain <your domain>]
			or: java -jar your-app.jar -decrypt -authfile <path to root password file> [-domain <your domain>]
- enhanced security 2: default master password is no longer hardcoded, it will be loaded from etc/master.password file (auto create if no exists) when "-authfile <path to master.password>" is not provided to launch the app
- enhanced security 3: HTTP server supports caller address filter with regex precheck
- enhanced security 4: gRPC server supports caller address filter with regex precheck
- enhanced security 5: added @Log.maskDataFields and refactoring FormatterUtil.replaceDataField to protect data not only in JSON format but also for sanitized JON, XML, sanitized XML and Form data.
- enhanced security 6: fixed CWE-117, 331, 338, 327. 73, 90 flaws, also verified and marked false positive CWE flaws.
- enhanced security 7: replace JKS with PKCS12
- upgrade to Netty 4.2.x
- refactoring CLI exit code

- API new: added @UniqueIgnore to mute @Unique check alert for expected duplicated values
- API new: added @Inspector.name and @Daemon.requiredHealthChecks (array of @Inspector.names, empty/null means ignore all HealthChecks)
	this is to set Controller and/or its methods on daemon mode (accessable when pause/health failed but not for specified @Inspector.name

- API renamed: @Controller.implTag renamed to @Controller.AlternativeName