@@ -745,7 +745,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
-            <!--            <scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
